# MyHttpd

./: .gitignore  AUTHORS  Makefile.am  README  README.md  TODO  configure.ac
src/: cgi-handler.cc  cgi-handler.hh  configuration.hh  configuration.hxx  get_request.hh  get_request.hxx  main.cc  request.hh  request.hxx  response.hh  response.hxx  server_config.hh  server_config.hxx  server_connection.hh  server_connection.hxx  server_connexion.hh
src/tests/: index.html
src/threadpool/: executor.cc  executor.hh  thread-pool.cc  thread-pool.hh  threadpool.hh
src2/: configuration.cc  configuration.hh  get-request.cc  get-request.hh  main.cc  request.cc  request.hh  response.cc  response.hh  server-config.cc  server-config.hh  server-connection.cc  server-connection.hh
src2/threadpool/: thread-pool.cc
tests/: server.conf  server_bad.conf  test.cc  test_client.sh  test_parser.cc  test_server.sh  thread-pool-test.cc
tests/fake_site/: script.php
tests/server1/: home.html  index.html  not_found.html  server_error.html
